--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -48,8 +48,8 @@
 
     <script>
         // Define your API key and base URL
-        const apiKey = "fd6b00e0a174504188b600b5f5b9cb04";
-        const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
+        // const apiKey = "fd6b00e0a174504188b600b5f5b9cb04DELETE";
+        // const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=DELETE";
   
         const searchbox=document.querySelector(".search input");
         const searchbtn=document.querySelector(".search button");
