--- a/RandomPassword-Gen/index.html
+++ b/RandomPassword-Gen/index.html
@@ -28,12 +28,24 @@
 
             </div>
 
+            <div class="QRcreator" id="QRcreators">
+                <h1> QR Creator </h1>
+                <input type="text" id="inputtext">
+                <div id="qrimg">
+                    <img src="" id="QRimage">
+                </div>
+                <button id="btn" onclick="generatesQR()"> Generate QR Code</button>
+
+            </div>
+
 
         </div>
 
 
 
-        <script src="script.js" > </script>
+        <script src="script.js" >
+           
+        </script>
 
     </body>
 
