--- a/QRcode-Creator/index.html
+++ b/QRcode-Creator/index.html
@@ -26,7 +26,7 @@
 
     <script>
 
-        let imgBoxs = document.getElementById("imgBox");
+        // let imgBoxs = document.getElementById("imgBox");
         let qrImages = document.getElementById("qrImage");
         let insubs = document.getElementById("insub");
 
