--- a/ToastBar/index.html
+++ b/ToastBar/index.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toast Notification</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://kit.fontawesome.com/c4254e24a8.js" crossorigin="anonymous"> </script>
-
+    <script src="https://kit.fontawesome.com/d7b07f0acf.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -28,9 +27,9 @@
 
         let toastBox = document.getElementById("toastBox");
 
-        let succesmsg = ' <i class="fa-solid fa-circle-check"></i> Successfully done!!';
-        let errormsg = "Error, try after sometime";
-        let invalidmsg = "It's an Invalid submission";
+        let succesmsg = ' <i class="fa-solid fa-square-check"></i> Successfully done!!';
+        let errormsg = '<i class="fa-solid fa-circle-xmark"></i> Error, try after sometime';
+        let invalidmsg = '<i class="fa-solid fa-triangle-exclamation"></i> Its an Invalid submission';
 
 
         function showTost(msg) {
